org.eclipse.xtext.xtext.ui.examples/projects/org.eclipse.xtext.example.domainmodel/antlr4gen/src-gen/CodebuffParser.java
// Generated from org/antlr/codebuff/Codebuff.g4 by ANTLR 4.5.3
package org.antlr.codebuff;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CodebuffParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, RULE_HEX=78, RULE_INT=79, RULE_DECIMAL=80, 
		RULE_ID=81, RULE_STRING=82, RULE_ML_COMMENT=83, RULE_SL_COMMENT=84, RULE_WS=85, 
		RULE_ANY_OTHER=86;
	public static final int
		RULE_ruleDomainModel = 0, RULE_ruleAbstractElement = 1, RULE_rulePackageDeclaration = 2, 
		RULE_ruleEntity = 3, RULE_ruleFeature = 4, RULE_ruleProperty = 5, RULE_ruleOperation = 6, 
		RULE_ruleXExpression = 7, RULE_ruleXAssignment = 8, RULE_ruleOpSingleAssign = 9, 
		RULE_ruleOpMultiAssign = 10, RULE_ruleXOrExpression = 11, RULE_ruleOpOr = 12, 
		RULE_ruleXAndExpression = 13, RULE_ruleOpAnd = 14, RULE_ruleXEqualityExpression = 15, 
		RULE_ruleOpEquality = 16, RULE_ruleXRelationalExpression = 17, RULE_ruleOpCompare = 18, 
		RULE_ruleXOtherOperatorExpression = 19, RULE_ruleOpOther = 20, RULE_ruleXAdditiveExpression = 21, 
		RULE_ruleOpAdd = 22, RULE_ruleXMultiplicativeExpression = 23, RULE_ruleOpMulti = 24, 
		RULE_ruleXUnaryOperation = 25, RULE_ruleOpUnary = 26, RULE_ruleXCastedExpression = 27, 
		RULE_ruleXPostfixOperation = 28, RULE_ruleOpPostfix = 29, RULE_ruleXMemberFeatureCall = 30, 
		RULE_ruleXPrimaryExpression = 31, RULE_ruleXLiteral = 32, RULE_ruleXCollectionLiteral = 33, 
		RULE_ruleXSetLiteral = 34, RULE_ruleXListLiteral = 35, RULE_ruleXClosure = 36, 
		RULE_ruleXExpressionInClosure = 37, RULE_ruleXShortClosure = 38, RULE_ruleXParenthesizedExpression = 39, 
		RULE_ruleXIfExpression = 40, RULE_ruleXSwitchExpression = 41, RULE_ruleXCasePart = 42, 
		RULE_ruleXForLoopExpression = 43, RULE_ruleXBasicForLoopExpression = 44, 
		RULE_ruleXWhileExpression = 45, RULE_ruleXDoWhileExpression = 46, RULE_ruleXBlockExpression = 47, 
		RULE_ruleXExpressionOrVarDeclaration = 48, RULE_ruleXVariableDeclaration = 49, 
		RULE_ruleJvmFormalParameter = 50, RULE_ruleFullJvmFormalParameter = 51, 
		RULE_ruleXFeatureCall = 52, RULE_ruleFeatureCallID = 53, RULE_ruleIdOrSuper = 54, 
		RULE_ruleXConstructorCall = 55, RULE_ruleXBooleanLiteral = 56, RULE_ruleXNullLiteral = 57, 
		RULE_ruleXNumberLiteral = 58, RULE_ruleXStringLiteral = 59, RULE_ruleXTypeLiteral = 60, 
		RULE_ruleXThrowExpression = 61, RULE_ruleXReturnExpression = 62, RULE_ruleXTryCatchFinallyExpression = 63, 
		RULE_ruleXSynchronizedExpression = 64, RULE_ruleXCatchClause = 65, RULE_ruleQualifiedName = 66, 
		RULE_ruleNumber = 67, RULE_ruleJvmTypeReference = 68, RULE_ruleArrayBrackets = 69, 
		RULE_ruleXFunctionTypeRef = 70, RULE_ruleJvmParameterizedTypeReference = 71, 
		RULE_ruleJvmArgumentTypeReference = 72, RULE_ruleJvmWildcardTypeReference = 73, 
		RULE_ruleJvmUpperBound = 74, RULE_ruleJvmUpperBoundAnded = 75, RULE_ruleJvmLowerBound = 76, 
		RULE_ruleJvmLowerBoundAnded = 77, RULE_ruleQualifiedNameWithWildcard = 78, 
		RULE_ruleValidID = 79, RULE_ruleXImportSection = 80, RULE_ruleXImportDeclaration = 81, 
		RULE_ruleQualifiedNameInStaticImport = 82;
	public static final String[] ruleNames = {
		"ruleDomainModel", "ruleAbstractElement", "rulePackageDeclaration", "ruleEntity", 
		"ruleFeature", "ruleProperty", "ruleOperation", "ruleXExpression", "ruleXAssignment", 
		"ruleOpSingleAssign", "ruleOpMultiAssign", "ruleXOrExpression", "ruleOpOr", 
		"ruleXAndExpression", "ruleOpAnd", "ruleXEqualityExpression", "ruleOpEquality", 
		"ruleXRelationalExpression", "ruleOpCompare", "ruleXOtherOperatorExpression", 
		"ruleOpOther", "ruleXAdditiveExpression", "ruleOpAdd", "ruleXMultiplicativeExpression", 
		"ruleOpMulti", "ruleXUnaryOperation", "ruleOpUnary", "ruleXCastedExpression", 
		"ruleXPostfixOperation", "ruleOpPostfix", "ruleXMemberFeatureCall", "ruleXPrimaryExpression", 
		"ruleXLiteral", "ruleXCollectionLiteral", "ruleXSetLiteral", "ruleXListLiteral", 
		"ruleXClosure", "ruleXExpressionInClosure", "ruleXShortClosure", "ruleXParenthesizedExpression", 
		"ruleXIfExpression", "ruleXSwitchExpression", "ruleXCasePart", "ruleXForLoopExpression", 
		"ruleXBasicForLoopExpression", "ruleXWhileExpression", "ruleXDoWhileExpression", 
		"ruleXBlockExpression", "ruleXExpressionOrVarDeclaration", "ruleXVariableDeclaration", 
		"ruleJvmFormalParameter", "ruleFullJvmFormalParameter", "ruleXFeatureCall", 
		"ruleFeatureCallID", "ruleIdOrSuper", "ruleXConstructorCall", "ruleXBooleanLiteral", 
		"ruleXNullLiteral", "ruleXNumberLiteral", "ruleXStringLiteral", "ruleXTypeLiteral", 
		"ruleXThrowExpression", "ruleXReturnExpression", "ruleXTryCatchFinallyExpression", 
		"ruleXSynchronizedExpression", "ruleXCatchClause", "ruleQualifiedName", 
		"ruleNumber", "ruleJvmTypeReference", "ruleArrayBrackets", "ruleXFunctionTypeRef", 
		"ruleJvmParameterizedTypeReference", "ruleJvmArgumentTypeReference", "ruleJvmWildcardTypeReference", 
		"ruleJvmUpperBound", "ruleJvmUpperBoundAnded", "ruleJvmLowerBound", "ruleJvmLowerBoundAnded", 
		"ruleQualifiedNameWithWildcard", "ruleValidID", "ruleXImportSection", 
		"ruleXImportDeclaration", "ruleQualifiedNameInStaticImport"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'package'", "'{'", "'}'", "'entity'", "'extends'", "':'", "'op'", 
		"'('", "','", "')'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'<'", 
		"'>'", "'>='", "'||'", "'&&'", "'=='", "'!='", "'==='", "'!=='", "'instanceof'", 
		"'->'", "'..<'", "'..'", "'=>'", "'<>'", "'?:'", "'+'", "'-'", "'*'", 
		"'**'", "'/'", "'%'", "'!'", "'as'", "'++'", "'--'", "'.'", "'::'", "'?.'", 
		"'#'", "'['", "']'", "'|'", "';'", "'if'", "'else'", "'switch'", "'default'", 
		"'case'", "'for'", "'while'", "'do'", "'var'", "'val'", "'static'", "'import'", 
		"'extension'", "'super'", "'new'", "'false'", "'true'", "'null'", "'typeof'", 
		"'throw'", "'return'", "'try'", "'finally'", "'synchronized'", "'catch'", 
		"'?'", "'&'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "RULE_HEX", "RULE_INT", "RULE_DECIMAL", 
		"RULE_ID", "RULE_STRING", "RULE_ML_COMMENT", "RULE_SL_COMMENT", "RULE_WS", 
		"RULE_ANY_OTHER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Codebuff.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CodebuffParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RuleDomainModelContext extends org.antlr.v4.runtime.RuleContextWithAltNum {
		public RuleXImportSectionContext ruleXImportSection() {
			return getRuleContext(RuleXImportSectionContext.class,0);
		}
		public List<RuleAbstractElementContext> ruleAbstractElement() {
			return getRuleContexts(RuleAbstractElementContext.class);
		}
		public RuleAbstractElementContext ruleAbstractElement(int i) {
			return getRuleContext(RuleAbstractElementContext.class,i);
		}
		public RuleDomainModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleDomainModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodebuffListener ) ((CodebuffListener)listener).enterRuleDomainModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodebuffListener ) ((CodebuffListener)listener).exitRuleDomainModel(this);
		}
	}

	public final RuleDomainModelContext ruleDomainModel() throws RecognitionException {
		RuleDomainModelContext _localctx = new RuleDomainModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ruleDomainModel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_la = _input.LA(1);
			if (_la==T__61) {
				{
				setState(166);
				ruleXImportSection();
				}
			}

			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__3) {
				{
				{
				setState(169);
				ruleAbstractElement();
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleAbstractElementContext extends org.antlr.v4.runtime.RuleContextWithAltNum {
		public RulePackageDeclarationContext rulePackageDeclaration() {
			return getRuleContext(RulePackageDeclarationContext.class,0);
		}
		public RuleEntityContext ruleEntity() {
			return getRuleContext(RuleEntityContext.class,0);
		}
		public RuleAbstractElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleAbstractElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodebuffListener ) ((CodebuffListener)listener).enterRuleAbstractElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodebuffListener ) ((CodebuffListener)listener).exitRuleAbstractElement(this);
		}
	}

	public final RuleAbstractElementContext ruleAbstractElement() throws RecognitionException {
		RuleAbstractElementContext _localctx = new RuleAbstractElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ruleAbstractElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(175);
				rulePackageDeclaration();
				}
				break;
			case T__3:
				{
				setState(176);
				ruleEntity();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulePackageDeclarationContext extends org.antlr.v4.runtime.RuleContextWithAltNum {
		public RuleQualifiedNameContext ruleQualifiedName() {
			return getRuleContext(RuleQualifiedNameContext.class,0);
		}
		public List<RuleAbstractElementContext> ruleAbstractElement() {
			return getRuleContexts(RuleAbstractElementContext.class);
		}
		public RuleAbstractElementContext ruleAbstractElement(int i) {
			return getRuleContext(RuleAbstractElementContext.class,i);
		}
		public RulePackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rulePackageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodebuffListener ) ((CodebuffListener)listener).enterRulePackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodebuffListener ) ((CodebuffListener)listener).exitRulePackageDeclaration(this);
		}
	}

	public final RulePackageDeclarationContext rulePackageDeclaration() throws RecognitionException {
		RulePackageDeclarationContext _localctx = new RulePackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rulePackageDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(T__0);
			setState(180);
			ruleQualifiedName();
			setState(181);
			match(T__1);
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__3) {
				{
				{
				setState(182);
				ruleAbstractElement();
				}
				}
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(188);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
